@@ -13,7 +13,7 @@ RSNAMES_C = basic_query.c games.c cocitation.c iterators.c \
 	attributes.c dqueue.c heap.c igraph_stack.c \
 	igraph_strvector.c igraph_trie.c matrix.c \
 	vector.c vector_ptr.c memory.c adjlist.c visitors.c \
-	igraph_grid.c atlas.c topology.c
+	igraph_grid.c atlas.c topology.c motifs.c
 
 RSNAMES_H = memory.h random.h atlas-edges.h
 
