@@ -1,3 +1,8 @@
+2006-02-06  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/src/rinterface.c	(R_igraph_motifs_randesu) : added
+	* interfaces/R/igraph/R/motifs.R (graph.motifs) : added
+
 2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/src/rinterface.c (R_igraph_growing_traits_game) :
